--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "mongoose-sequence": "^6.0.1",
     "passport": "^0.7.0",
-    "passport-github": "^1.1.0"
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12"
   }
 }
