--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose-sequence": "^6.0.1",
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "socket.io": "^4.8.1"
   }
 }
