--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^3.4.1"
   },
   "dependencies": {
+    "@turf/turf": "^7.2.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
