--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "devStart-api": "nodemon api/src/app.js",
     "lint": "eslint .",
     "fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.1"
   },
