--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "prettier": "^3.4.1"
+    "prettier": "^3.4.1",
+    "supertest": "^7.0.0"
   },
   "dependencies": {
     "@turf/turf": "^7.2.0",
